--- a/prometheus/deployments/prometheus.yaml
+++ b/prometheus/deployments/prometheus.yaml
@@ -39,6 +39,7 @@ spec:
               "--config.file=/etc/prometheus/prometheus.yml",
               "--storage.tsdb.path=/prometheus",
               "--storage.tsdb.retention.size=1600MB",
+              "--web.enable-otlp-receiver"
             ]
           ports:
             - containerPort: 9090
