--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -20,15 +20,11 @@ scrape_configs:
   - job_name: "prometheus"
     static_configs:
       - targets: ["localhost:9090"]
-
-  - job_name: "kubernetes-nodes"
-    scheme: https
-    tls_config:
-      ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-    authorization:
-      credentials_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-    kubernetes_sd_configs:
-      - role: node
+  
+  - job_name: node
+    static_configs:
+      - targets:
+        - "node-exporter.node-exporter.svc.cluster.local:9100"
 
   - job_name: "kubernetes-cadvisor"
     scheme: https
