--- a/postgres/deployment.yaml
+++ b/postgres/deployment.yaml
@@ -1,30 +1,75 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgres
+  name: postgres-alpha
   namespace: postgres
 spec:
   selector:
     matchLabels:
-      app: postgres
+      app: postgres-alpha
   replicas: 1
   template:
     metadata:
       labels:
-        app: postgres
+        app: postgres-alpha
     spec:
       containers:
         - name: postgres
-          image: postgres
+          image: postgres-alpha
           volumeMounts:
-          - name: postgres
-            mountPath: /var/lib/postgresql/data
+            - name: postgres-alpha
+              mountPath: /var/lib/postgresql/data
           ports:
             - containerPort: 5432
+          resources:
+            limits:
+              cpu: 200m
+              memory: 256Mi
+            requests:
+              cpu: 200m
+              memory: 256Mi
           envFrom:
             - secretRef:
                 name: postgres-secret
       volumes:
-        - name: postgres
+        - name: postgres-alpha
           persistentVolumeClaim:
-            claimName: postgres
+            claimName: postgres-alpha
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: postgres-beta
+  namespace: postgres
+spec:
+  selector:
+    matchLabels:
+      app: postgres-beta
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: postgres-beta
+    spec:
+      containers:
+        - name: postgres
+          image: postgres-beta
+          volumeMounts:
+            - name: postgres-beta
+              mountPath: /var/lib/postgresql/data
+          ports:
+            - containerPort: 5432
+          resources:
+            limits:
+              cpu: 200m
+              memory: 256Mi
+            requests:
+              cpu: 200m
+              memory: 256Mi
+          envFrom:
+            - secretRef:
+                name: postgres-secret
+      volumes:
+        - name: postgres-beta
+          persistentVolumeClaim:
+            claimName: postgres-beta
