--- a/postgres/service.yaml
+++ b/postgres/service.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: postgres
 spec:
   selector:
-    app: postgres
+    app: postgres-alpha
   ports:
     - protocol: TCP
       port: 5432
