--- a/prometheus/prometheus.yaml
+++ b/prometheus/prometheus.yaml
@@ -1,30 +1,17 @@
 # my global config
 global:
-  scrape_interval: 10s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
-  # evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
-  # scrape_timeout is set to the global default (10s).
-
-# Alertmanager configuration
-# alerting:
-  # alertmanagers:
-    # - static_configs:
-        # - targets:
-          # - alertmanager:9093
-
-# Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
-# rule_files:
-  # - "first_rules.yml"
-  # - "second_rules.yml"
+  scrape_interval: 10s
 
 scrape_configs:
-  - job_name: "prometheus"
+  - job_name: prometheus
     static_configs:
-      - targets: ["localhost:9090"]
-  
+      - targets:
+          - localhost:9090
+
   - job_name: node
     static_configs:
       - targets:
-        - "node-exporter.node-exporter.svc.cluster.local:9100"
+          - node-exporter.node-exporter.svc.cluster.local:9100
 
   - job_name: "kubernetes-cadvisor"
     scheme: https
@@ -35,3 +22,6 @@ scrape_configs:
       credentials_file: /var/run/secrets/kubernetes.io/serviceaccount/token
     kubernetes_sd_configs:
       - role: node
+
+remote_write:
+  - url: http://prometheus-bigquery-exporter:9201/write
