chore: reduce Prometheus role scope

--- a/prometheus/prometheus.yaml
+++ b/prometheus/prometheus.yaml
@@ -23,5 +23,15 @@ scrape_configs:
     kubernetes_sd_configs:
       - role: node
 
-remote_write:
-  - url: http://prometheus-bigquery-exporter:9201/write
+  - job_name: "analytics-collector"
+    kubernetes_sd_configs:
+      - role: pod
+    relabel_configs:
+      - source_labels:
+          - __meta_kubernetes_pod_name
+        action: keep
+        regex: "analytics-collector-.*"
+      - source_labels:
+          - __meta_kubernetes_pod_container_port_number
+        regex: "8001"
+        action: keep
