--- a/postgres/pvc.yaml
+++ b/postgres/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgres-alpha
+  name: postgres
   namespace: postgres
 spec:
   accessModes:
@@ -9,17 +9,4 @@ spec:
   storageClassName: local-path
   resources:
     requests:
-      storage: 5Gi
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: postgres-beta
-  namespace: postgres
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: local-path
-  resources:
-    requests:
-      storage: 5Gi
+      storage: 25Gi
