Add GitHub Actions workflow and improve Kubernetes configurations
- Add GitHub Actions workflow for branch protection with lint/test jobs
- Add Dependabot configuration for weekly GitHub Actions updates
- Update Prometheus version from v3.3.0 to v3.4.2
- Update Grafana version from 11.6.0 to 12.0.2
- Reorganize Prometheus PVCs into dedicated pvcs/ directory
- Add dedicated Grafana PVC for persistent storage
- Update Jaeger image digest and add all-in-one configuration
- Add comprehensive Jaeger OpenTelemetry configuration with OTLP, Jaeger, and Zipkin receivers
- Minor README formatting improvements

--- a/jaeger/deployment.yaml
+++ b/jaeger/deployment.yaml
@@ -16,11 +16,17 @@ spec:
       containers:
         - name: jaeger
           image: jaeger
+          args:
+            - --config
+            - /jaeger-config/all-in-one.yaml
           ports:
             - name: ingestion
               containerPort: 4318
             - name: interface
               containerPort: 16686
+          volumeMounts:
+            - name: jaeger-config
+              mountPath: /jaeger-config
           resources:
             limits:
               cpu: 100m
@@ -28,3 +34,7 @@ spec:
             requests:
               cpu: 100m
               memory: 256Mi
+      volumes:
+        - name: jaeger-config
+          configMap:
+            name: all-in-one
