--- a/prometheus/deployments/prometheus.yaml
+++ b/prometheus/deployments/prometheus.yaml
@@ -15,12 +15,13 @@ spec:
       labels:
         app: prometheus
     spec:
+      serviceAccountName: default
+      automountServiceAccountToken: true
       securityContext:
         runAsNonRoot: true
         runAsUser: 65534
         seccompProfile:
           type: RuntimeDefault
-      serviceAccountName: default
       containers:
         - name: prometheus
           image: prometheus
