--- a/prometheus/kustomization.yaml
+++ b/prometheus/kustomization.yaml
@@ -4,10 +4,10 @@ kind: Kustomization
 images:
   - name: prometheus
     newName: prom/prometheus
-    newTag: "v3.3.0"
+    newTag: "v3.4.2"
   - name: grafana
     newName: grafana/grafana-oss
-    newTag: "11.6.0"
+    newTag: "12.0.2"
 
 resources:
   - namespace.yaml
@@ -16,7 +16,8 @@ resources:
   - deployments/grafana.yaml
   - services/grafana.yaml
   - services/prometheus.yaml
-  - pvc.yaml
+  - pvcs/prometheus.yaml
+  - pvcs/grafana.yaml
 
 configMapGenerator:
   - name: prometheus-config
